# ralph

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
docs/prds/agent-notebook/: README.md  tasks.md
docs/prds/back-navigation/: README.md
docs/prds/detached-agent-runs/: README.md  tasks.md
docs/prds/homebrew-distribution/: README.md
docs/prds/interactive-file-browser/: README.md
docs/prds/local-config/: README.md  tasks.md
docs/prds/multi-provider-agent-backend/: README.md  notebook.md  tasks.md
docs/prds/quit-confirmation/: README.md
docs/prds/run-browser-cursor-stability/: README.md
docs/prds/run-history/: README.md  tasks.md
docs/prds/run-history-and-status/: README.md  tasks.md
docs/prds/single-process-runs/: 01-default-iterations-20.md  02-run-screen.md  04-stop-run.md  (+5 more)
ralph/: __main__.py  browser.py  cli.py  config.py  core.py  gh_issues.py  notifier.py  recorder.py  tasks.py  tui.py  worker.py
ralph/browser/: README.md  __init__.py  scanner.py
ralph/cli/: README.md  app.py  args.py  headless.py
ralph/config/: __init__.py  loader.py
ralph/core/: README.md  __init__.py  config.py  executor.py  format_stream.py  loop.py  prompts.py  run_meta.py
ralph/notifier/: __init__.py
ralph/traces/: README.md  __init__.py  events.py  reader.py  writer.py
ralph/tui/: README.md  __init__.py  app.py  css.py  screens.py  widgets.py
tests/: test_browser.py  test_cli_app.py  test_cli_args.py  test_cli_config.py  test_cli_runs.py  test_config.py  test_gh_issues.py  test_recorder.py  test_tasks.py  test_tui.py
(+25 files in other folders)
