[project]
name = "ralph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.41",
    "pytest>=9.0.2",
    "rich>=13.0",
]

[project.scripts]
ralph = "ralph.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
