[project]
name = "ralph"
version = "0.1.0"
description = "Autonomous coding agent loop powered by Claude"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jakub Szwajka", email = "szwajkajakub@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.41",
    "rich>=13.0",
]

[project.scripts]
ralph = "ralph.cli:main"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["ralph/"]

[tool.ruff]
exclude = [".venv", ".git", ".ralph", "ralph.egg-info"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "UP",     # pyupgrade — modernize syntax
    "ANN",    # flake8-annotations — require type annotations
    "RUF",    # ruff-specific rules
]
ignore = [
    "ANN401",  # allow Any in signatures (json config etc.)
    "E501",    # line length — handled by formatter
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
    "ty>=0.0.19",
]
